Changelog
=========

0.7
---

- Removed batch creation views for no longer used types.
  [hannosch]

- Removed the weekly planning views. We don't use Extropy to do detailed task
  planning anymore.
  [hannosch]

- Figure out how to do the real catalog index and metadata setup for our own
  tools without using custom GS handlers.
  [hannosch]

- Completely removed estimate handling.
  [hannosch]

- Removed the `claimTask` functionality.
  [hannosch]

- Really disable all of linkintegrity by overriding the event handlers.
  [hannosch]

- Added caching packages and config.
  [hannosch]

- Make sure to add the `start` index to our time tracker tool / catalog.
  [hannosch]

- Removed old test runner scripts.
  [hannosch]

- Use GS profile dependency mechanism to install the Invoice and Memo packages.
  Remove the custom setup handler.
  [hannosch]

- Removed specialized login_next script, which didn't serve any purpose
  anymore and was causing errors on @@logindestination.
  [hannosch]

- Initial implementation.
  [jarn]

- Add a summary field to ExtropHours which can be used to describe the work
  in more detail. Add a new worklog report which shows an overview of all work
  using this information.
  [wichert]

0.4
---

- Restructure tests a bit and add more
  [elvix]

- Add project manager field to project schema
  [elvix]

0.3
---

- Start History recording
  [elvix]