@@ -8,32 +8,26 @@ class ProgressBar(BrowserView):
             %(bar)s
         </a>
         <p class="discreet" style="clear:left;">
-            %(worked)s hours worked, %(remaining)s hours remain
+            %(worked)s hours worked
         </p><div style="clear:both">&nbsp;</div>'''
 
     _worked = '<span class="progressbar-done"></span>'
     _worked_short = '<span class="progressbar-done short"></span>'
-    _remaining = '<span class="progressbar-remaining"></span>'
-    _remaining_short = '<span class="progressbar-remaining short"></span>'
     _no_estimate = '<span class="progressbar-remaining">&raquo;</span>'
     _elipsis = '<span class="progressbar-elipsis">&hellip;</span>'
     _elipsis_size = 30
 
-    def __call__(self, worked=0, remaining=0, URL=None, **kw):
+    def __call__(self, worked=0, URL=None, **kw):
         worksize = int(worked)
-        remainsize = int(remaining)
-        large = (worksize + remainsize) > self._elipsis_size
+        large = worksize > self._elipsis_size
         if large:
             worksize = min(worksize, self._elipsis_size)
-            remainsize = min(remainsize, self._elipsis_size - worksize)
 
-        bar = self._worked * worksize + self._remaining * remainsize
+        bar = self._worked * worksize
         bar += large and self._elipsis or ''
         if not bar:
-            if worked or remaining:
-                # Timespans shorter than 1 hour
-                bar = (worked > remaining and self._worked_short or
-                                              self._remaining_short)
+            if worked:
+                bar = self._worked_short
             else:
                 bar = self._no_estimate
 
@@ -45,6 +39,6 @@ class ProgressBar(BrowserView):
 class SmallProgressBar(ProgressBar):
     _html = '''\
         <a class="progressbar-small" href="%(URL)s/timereport2"
-           title="%(worked)s hours worked, %(remaining)s hours remain"%(extra)s>
+           title="%(worked)s hours worked"%(extra)s>
             %(bar)s
         </a>'''
