@@ -137,9 +137,8 @@
 
         <div tal:define="worked here/getWorkedHours;
                          URL here/absolute_url;
-                         remaining here/getRemainingTime;
                          bar nocall:context/@@progressbar">
-            <a tal:replace="structure python:bar(URL=URL,remaining=remaining, worked=worked)"> </a>
+            <a tal:replace="structure python:bar(URL=URL, worked=worked)"> </a>
         </div>
 
         <p class="documentDescription" tal:content="here/Description">
