@@ -43,9 +43,8 @@
                 </p>
                 <tal:progressbar define="worked phase/getWorkedTime;
                                          URL phase/absolute_url;
-                                         remaining phase/getRemainingTime;
                                          bar nocall:context/@@smallprogressbar">
-                    <a tal:replace="structure python:bar(URL=URL,remaining=remaining, worked=worked)"></a>
+                    <a tal:replace="structure python:bar(URL=URL, worked=worked)"></a>
                     <span class="discreet"><span tal:content="worked">X</span> hours worked</span>
                 </tal:progressbar>
             </dt>
