@@ -162,7 +162,6 @@ class ExtropyTrackingTool(CatalogTool):
                 , ('startendrange'  , 'DateRangeIndex', {'since_field':'start', 'until_field':'end'})
                 , ('featureUID'     , 'FieldIndex',     None)
                 , ('getPriority'     , 'FieldIndex',    None)
-                , ('getRemainingTime','FieldIndex',     None)
                 , ('getWorkedHours','FieldIndex',     None)
                 , ('getDueDate','FieldIndex',     None)
                 )
@@ -188,7 +187,6 @@ class ExtropyTrackingTool(CatalogTool):
                , 'ModificationDate'
                , 'portal_type'
                , 'getResponsiblePerson'
-               , 'getRemainingTime'
                , 'getId'
                , 'featureUID'
                , 'start'
