@@ -4,6 +4,9 @@ Changelog
 0.7
 ---
 
+- Removed the handling of "remaining" time.
+  [hannosch]
+
 - Removed batch creation views for no longer used types.
   [hannosch]
 
